Module2/Module2/Assignments/2012111111/error.txt
assign.cpp: In function ‘int main()’:
assign.cpp:10:1: error: expected ‘;’ before ‘}’ token
 }
 ^
